Fix about link formatting on small screens

--- a/source/style.css
+++ b/source/style.css
@@ -52,6 +52,10 @@ a:link, a:visited {
   .about td {
     display: block;
   }
+
+  .about tr {
+    display: block;
+  }
 }
 
 .map {
